<resources>
    <string name="app_name">PalindromeApp</string>
    <string name="hint_name">Name</string>
    <string name="hint_palindrome">Palindrome</string>

    <string name="desc_image_add_people">Image for adding people</string>
    <string name="button_check">CHECK</string>
    <string name="button_next">NEXT</string>

    <string name="toolbar_title_second_screen">Second Screen</string>
    <string name="desc_back_button">Back button</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_name">John Doe</string>
    <string name="text_selected_user_name">Selected User Name</string>
    <string name="button_choose_user">Choose a User</string>
    <string name="no_users_founds">No users founds</string>
    <string name="this_is_list_users">this is list users</string>
    <string name="third_screen">Third Screen</string>
    <string name="email_example_com">email@example.com</string>
    <string name="full_name">Full Name</string>
    <string name="image_users">image users</string>

</resources>