<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:padding="12dp">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:contentDescription="@string/image_users"
        android:src="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintTop_toTopOf="@id/imgAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email_example_com"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
