<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.secondScreen.SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/desc_back_button"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_title_second_screen"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/darkText"
                android:letterSpacing="0.0"
                android:layout_gravity="center" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="21dp"
            android:paddingTop="13dp"
            android:paddingEnd="21dp"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:letterSpacing="0.0"
                android:lineHeight="36dp"
                android:text="@string/text_welcome"
                android:textColor="@color/darkText"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:letterSpacing="0.0"
                android:lineHeight="36dp"
                android:text="@string/text_name"
                android:textColor="@color/darkText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />


            <TextView
                android:id="@+id/tvSelectedUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:letterSpacing="0.0"
                android:lineHeight="36dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="24sp"
                android:text="@string/text_selected_user_name"
                android:textColor="@color/darkText"
                android:layout_marginTop="222dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChooseUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="315dp"
                android:text="@string/button_choose_user"
                app:backgroundTint="@color/blueDark"
                android:textColor="@color/whiteText"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSelectedUser"
                app:layout_constraintWidth_max="310dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>
